Added styles and tweaked html

--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
-<html>
-    <h1> BWAAAAAA </h1>
-    <p> heheheeh</p>
+<!doctype html>
+<html lang="en-AU">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width"/>
+    <title>Welcome to the Wyrdle Zone</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
+    <link href="styles/style.css" rel="stylesheet"/>
+  </head>
+  <body>
+    <h1>Welcome to the Wyrdle Zone!</h1>
+    <p>Gonna make a funky website introducing myself!!!! Woooo</p>
+    <img src="images/icon.jpg" alt="Illustration of my bird like monstersona.">
+  </body>
 </html>
