Added notes sections to the study diary

--- a/index.html
+++ b/index.html
@@ -9,7 +9,15 @@
   </head>
   <body>
     <h1>Welcome to the Wyrdle Zone!</h1>
-    <p>Gonna make a funky website introducing myself!!!! Woooo</p>
-    <img src="images/icon.jpg" alt="Illustration of my bird like monstersona.">
+    <span class="header-img">
+      <img src="images/icon.png" alt="Illustration of my bird like monstersona." class="the-blorbo">
+      <button>Change user</button>
+    </span>
+    <span>
+      <h2 class="date">21st October 2023</h2>
+      <p>When Wyrdle has a quarter life crisis and wants to get out of marketing lmao. We're studying how to use HTML, CSS and JS with MDN's very helpful tools. <a href="https://developer.mozilla.org/en-US/docs/Learn/JavaScript/First_steps/A_first_splash">This</a> is where we left off. Continue forward!</p>
+      <p class="notes-section">For next time, we should look into <a href="https://developer.mozilla.org/en-US/docs/Learn/Server-side">Server-side website programming.</a></p>
+    </span>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
