--- a/graphic-design/index.html
+++ b/graphic-design/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width"/>
-    <title>Motion Design and Animation</title>
+    <title>Graphic Design</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
     <link href="../styles/style.css" rel="stylesheet"/>
   </head>
   <body>
-    <h1>Motion Design and Animation</h1>
+    <h1>Character Design</h1>
     <script src="scripts/main.js"></script>
   </body>
 </html>
