--- a/illustration/index.html
+++ b/illustration/index.html
@@ -6,9 +6,26 @@
     <title>Illustration</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
     <link href="../styles/style.css" rel="stylesheet"/>
+    <link href="../styles/illustration.css" rel="stylesheet"/>
   </head>
   <body>
     <h1>Illustration</h1>
-    <script src="scripts/main.js"></script>
+    <div class="illustration-gallery">
+      <img src="/illustration/images/Zulay.jpg" class="illustration-gallery-item">
+      <img src="/illustration/images/Hungry-Ghost-Festival.jpg" class="illustration-gallery-item">
+      <img src="/illustration/images/Dragon-Booster-Fanart-3.jpg" class="illustration-gallery-item">
+      <img src="/illustration/images/Fashion-Painting.jpg" class="illustration-gallery-item">
+      <img src="/illustration/images/Dragon-Booster-Fanart-2.jpg" class="illustration-gallery-item">
+      <img src="/illustration/images/Ice-King.jpg" class="illustration-gallery-item">
+      <img src="/illustration/images/Ivy-Pet-Portrait.jpg" class="illustration-gallery-item">
+      <img src="/illustration/images/Maruki-Nurse-Wedding.jpg" class="illustration-gallery-item">
+      <img src="/illustration/images/Seville.jpg" class="illustration-gallery-item">
+      <img src="/illustration/images/Original-Character-Designs.jpg" class="illustration-gallery-item">
+      <img src="/illustration/images/Monstersona.jpg" class="illustration-gallery-item">
+      <img src="/illustration/images/Pontianak.jpg" class="illustration-gallery-item">
+      <img src="/illustration/images/Yuppie-Psycho-Fanart.jpg" class="illustration-gallery-item">
+      <img src="/illustration/images/Seville-Reference.jpg" class="illustration-gallery-item">
+      <img src="/illustration/images/Fashion-Portrait.jpg" class="illustration-gallery-item">
+    </div>
   </body>
 </html>
