--- a/index.html
+++ b/index.html
@@ -5,7 +5,16 @@
     <meta name="viewport" content="width=device-width"/>
     <title>Wyrdle Zone</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="styles/style.css" rel="stylesheet"/>
+    <nav class="navbar">
+      <div><a href="/">Home</a></div>
+      <div><a href="./illustration/">Illustration</a></div>
+      <div><a href="./graphic design/">Graphic Design</a></div>
+      <div><a href="./games/">Games</a></div>
+      <div><a href="./comics-and-zines/">Comics and Zines</a></div>
+      <div><a href="./about/">About</a></div>
+    </nav>
   </head>
   <body>
     <h1>Welcome to the Wyrdle Zone!</h1>
