Added new art and buttons to comics section

--- a/comics-and-zines/index.html
+++ b/comics-and-zines/index.html
@@ -5,10 +5,30 @@
     <meta name="viewport" content="width=device-width"/>
     <title>Comics and Zines</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="../styles/style.css" rel="stylesheet"/>
+    <link href="../styles/comics-and-zines.css" rel="stylesheet"/>
+    <nav class="navbar">
+      <div><a href="/">Home</a></div>
+      <div><a href="../illustration/">Illustration</a></div>
+      <div><a href="../graphic-design/">Graphic Design</a></div>
+      <div><a href="../games/">Games</a></div>
+      <div><a href="../comics-and-zines/">Comics and Zines</a></div>
+      <div><a href="../about/">About</a></div>
+    </nav>
   </head>
   <body>
     <h1>Comics and Zines</h1>
-    <script src="scripts/main.js"></script>
+    <div class="comic-gallery">
+      <div class="comic-container"><a href="./Adventure-time"></a></div>
+      <div class="comic-container"><a href="./Dragon-booster-archive"></a></div>
+      <div class="comic-container"><a href="./Dragons-treasure"></a></div>
+      <div class="comic-container"><a href="./Gentlemans-guide"></a></div>
+      <div class="comic-container"><a href="./Memories-of-the-sea"></a></div>
+      <div class="comic-container"><a href="./Pokemon-archive"></a></div>
+      <div class="comic-container"><a href="./The-fall"></a></div>
+      <div class="comic-container"><a href="./The-harvest-dragon"></a></div>
+      <div class="comic-container"><a href="./Whos-that-old-man"></a></div>
+    </div>
   </body>
 </html>
