--- a/illustration/index.html
+++ b/illustration/index.html
@@ -10,11 +10,11 @@
     <link href="../styles/illustration.css" rel="stylesheet"/>
     <nav class="navbar">
       <div><a href="/">Home</a></div>
-      <div><a href="./illustration/">Illustration</a></div>
-      <div><a href="./graphic design/">Graphic Design</a></div>
-      <div><a href="./games/">Games</a></div>
-      <div><a href="./comics-and-zines/">Comics and Zines</a></div>
-      <div><a href="./about/">About</a></div>
+      <div><a href="../illustration/">Illustration</a></div>
+      <div><a href="../graphic-design/">Graphic Design</a></div>
+      <div><a href="../games/">Games</a></div>
+      <div><a href="../comics-and-zines/">Comics and Zines</a></div>
+      <div><a href="../about/">About</a></div>
     </nav>
   </head>
   <body>
