--- a/games/index.html
+++ b/games/index.html
@@ -8,7 +8,9 @@
     <link href="../styles/style.css" rel="stylesheet"/>
   </head>
   <body>
+    <div class="page-content">
     <h1>Games</h1>
-    <script src="scripts/main.js"></script>
+    
+    </div>
   </body>
 </html>
