--- a/illustration/index.html
+++ b/illustration/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="../styles/style.css" rel="stylesheet"/>
     <link href="../styles/illustration.css" rel="stylesheet"/>
+  </head>
+  <body>
     <nav class="navbar">
       <div><a href="/">Home</a></div>
       <div><a href="../illustration/">Illustration</a></div>
@@ -16,25 +18,25 @@
       <div><a href="../comics-and-zines/">Comics and Zines</a></div>
       <div><a href="../about/">About</a></div>
     </nav>
-  </head>
-  <body>
-    <h1>Illustration</h1>
-    <div class="illustration-gallery">
-      <img src="/illustration/images/Zulay.jpg" class="illustration-gallery-item">
-      <img src="/illustration/images/Hungry-Ghost-Festival.jpg" class="illustration-gallery-item">
-      <img src="/illustration/images/Dragon-Booster-Fanart-3.jpg" class="illustration-gallery-item">
-      <img src="/illustration/images/Fashion-Painting.jpg" class="illustration-gallery-item">
-      <img src="/illustration/images/Dragon-Booster-Fanart-2.jpg" class="illustration-gallery-item">
-      <img src="/illustration/images/Ice-King.jpg" class="illustration-gallery-item">
-      <img src="/illustration/images/Ivy-Pet-Portrait.jpg" class="illustration-gallery-item">
-      <img src="/illustration/images/Maruki-Nurse-Wedding.jpg" class="illustration-gallery-item">
-      <img src="/illustration/images/Seville.jpg" class="illustration-gallery-item">
-      <img src="/illustration/images/Original-Character-Designs.jpg" class="illustration-gallery-item">
-      <img src="/illustration/images/Monstersona.jpg" class="illustration-gallery-item">
-      <img src="/illustration/images/Pontianak.jpg" class="illustration-gallery-item">
-      <img src="/illustration/images/Yuppie-Psycho-Fanart.jpg" class="illustration-gallery-item">
-      <img src="/illustration/images/Seville-Reference.jpg" class="illustration-gallery-item">
-      <img src="/illustration/images/Fashion-Portrait.jpg" class="illustration-gallery-item">
+    <div class="page-content">
+      <h1>Illustration</h1>
+      <div class="illustration-gallery">
+        <img src="/illustration/images/Zulay.jpg" class="illustration-gallery-item">
+        <img src="/illustration/images/Hungry-Ghost-Festival.jpg" class="illustration-gallery-item">
+        <img src="/illustration/images/Dragon-Booster-Fanart-3.jpg" class="illustration-gallery-item">
+        <img src="/illustration/images/Fashion-Painting.jpg" class="illustration-gallery-item">
+        <img src="/illustration/images/Dragon-Booster-Fanart-2.jpg" class="illustration-gallery-item">
+        <img src="/illustration/images/Ice-King.jpg" class="illustration-gallery-item">
+        <img src="/illustration/images/Ivy-Pet-Portrait.jpg" class="illustration-gallery-item">
+        <img src="/illustration/images/Maruki-Nurse-Wedding.jpg" class="illustration-gallery-item">
+        <img src="/illustration/images/Seville.jpg" class="illustration-gallery-item">
+        <img src="/illustration/images/Original-Character-Designs.jpg" class="illustration-gallery-item">
+        <img src="/illustration/images/Monstersona.jpg" class="illustration-gallery-item">
+        <img src="/illustration/images/Pontianak.jpg" class="illustration-gallery-item">
+        <img src="/illustration/images/Yuppie-Psycho-Fanart.jpg" class="illustration-gallery-item">
+        <img src="/illustration/images/Seville-Reference.jpg" class="illustration-gallery-item">
+        <img src="/illustration/images/Fashion-Portrait.jpg" class="illustration-gallery-item">
+      </div>
     </div>
   </body>
 </html>
