--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,9 @@
     <link href="../styles/style.css" rel="stylesheet"/>
   </head>
   <body>
-    <h1>About Me</h1>
-    <script src="scripts/main.js"></script>
+    <h1>About</h1>
+    <p>Ann is excited by heartfelt creative projects. In particular, they are passionate about comics, zines, 2D game art and UI, and illustration— as long as it involves drawing and/or telling stories! Tales that are dramatic, tragic and romantic are what they are most drawn to, with a sprinkling of hope and heart.</p>
+    <p>In addition, they love organising events and fostering communities, finding joy in bringing people together. In the past, they co-founded, organised and planned out The Games Exchange, a series of events to exchange Australian games for International ones, for showcase and appreciation across cultures. They've also organised and planned local indie game events like WIP Nights, where Sydney-based game developers come together to talk about their in-progress projects to fellow developers. They're currently spearheading the Malaysian Comics Jam Group, organising fortnightly meetups and events for local comic artists and enthusiasts.</p>
+    <p>Having returned to Malaysia after studying and working in Melbourne, Australia, for 8+ years, they've developed a deep love for zines and birdwatching. Catch them rambling about paper engineering as a means for creative storytelling, and about what new bird species they've seen. With a developing interest in flora and fauna, keep an eye out for their Amateur Birding Tours soon!</p>
   </body>
 </html>
