Updated the whole home page!

--- a/index.html
+++ b/index.html
@@ -51,9 +51,25 @@
         <img src="images/bubble.png" alt="A drawing" class="homepage-comic-subpanel-contents bubble-one">
         <p class="homepage-comic-subpanel-contents text-box text-box-two">...and whatever creative pursuit my heart fancies!</p>
       </div>
-      <img src="images/events.png" alt="A drawing" class="homepage-comic-panel">
-      <img src="images/contact.png" alt="A drawing" class="homepage-comic-panel">
-      <p><a href="mailto:wyrdle.art@gmail.com">wyrdle.art@gmail.com</a></p>
+      <div class="homepage-comic-subpanel">
+        <img src="images/events.png" alt="A drawing" class="homepage-comic-subpanel-contents" style="width: 100%;">
+        <p class="homepage-comic-subpanel-contents text-box text-box-three">I also love organising and planning events and activities for others!</p>
+        <p class="homepage-comic-subpanel-contents text-box text-box-four">Some events I’ve organised in the past:</p>
+        <ul class="homepage-comic-subpanel-contents text-box text-box-five">
+          <li>Comics Jam Malaysia</li>
+          <li>Games Exchange</li>
+          <li>WIP Nights</li>
+          <li>Dragon Booster Fan Tarot and Zine project</li>
+          <li>Stories for a Change Zine</li>
+        </ul>
+        <p class="homepage-comic-subpanel-contents text-box text-box-six">It brings me a lot of joy to bring people together!</p>
+      </div>
+      <div class="homepage-comic-subpanel">
+        <img src="images/contact.png" alt="A drawing" class="homepage-comic-subpanel-contents" style="width: 100%;">
+        <p class="homepage-comic-subpanel-contents text-box text-box-seven">Reach out to me here!</p>
+        <p class="homepage-comic-subpanel-contents text-box text-box-eight"><a href="mailto:wyrdle.art@gmail.com">wyrdle.art@gmail.com</a></p>
+        <a href="mailto:wyrdle.art@gmail.com"><img src="images/mail-creature.png" alt="A drawing" class="homepage-comic-subpanel-contents mail-icon"></a>
+      </div>
     </div>  
     </div>
     <footer>
