added graphic design stylesheet

--- a/comics-and-zines/index.html
+++ b/comics-and-zines/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width"/>
     <title>Comics and Zines</title>
+    <link href="../styles/style.css" rel="stylesheet"/>
     <link href="../styles/comics-and-zines.css" rel="stylesheet"/>
   </head>
   <body>
