--- a/graphic-design/index.html
+++ b/graphic-design/index.html
@@ -6,9 +6,17 @@
     <title>Graphic Design</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
     <link href="../styles/style.css" rel="stylesheet"/>
+    <link href="../styles/graphic-design.css" rel="stylesheet"/>
   </head>
   <body>
-    <h1>Character Design</h1>
+    <div class="page-content">
+      <h1>Graphic Design</h1>
+      <div class="project-gallery">
+        <div class="project-container"><a href="/"></a></div>
+        <div class="project-container"><a href="/"></a></div>
+        <div class="project-container"><a href="/"></a></div>
+      </div>
+    </div>
     <script src="scripts/main.js"></script>
   </body>
 </html>
