--- a/about/index.html
+++ b/about/index.html
@@ -3,14 +3,58 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width"/>
-    <title>About Me</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
+    <title>About</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="../styles/style.css" rel="stylesheet"/>
   </head>
   <body>
+    <div class="page-content">
+      <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../illustration/">Illustration</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../graphic-design/">Graphic Design</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../games/">Games</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../comics-and-zines/">Comics and Zines</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../about/">About</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
     <h1>About</h1>
-    <p>Ann is excited by heartfelt creative projects. In particular, they are passionate about comics, zines, 2D game art and UI, and illustration— as long as it involves drawing and/or telling stories! Tales that are dramatic, tragic and romantic are what they are most drawn to, with a sprinkling of hope and heart.</p>
-    <p>In addition, they love organising events and fostering communities, finding joy in bringing people together. In the past, they co-founded, organised and planned out The Games Exchange, a series of events to exchange Australian games for International ones, for showcase and appreciation across cultures. They've also organised and planned local indie game events like WIP Nights, where Sydney-based game developers come together to talk about their in-progress projects to fellow developers. They're currently spearheading the Malaysian Comics Jam Group, organising fortnightly meetups and events for local comic artists and enthusiasts.</p>
-    <p>Having returned to Malaysia after studying and working in Melbourne, Australia, for 8+ years, they've developed a deep love for zines and birdwatching. Catch them rambling about paper engineering as a means for creative storytelling, and about what new bird species they've seen. With a developing interest in flora and fauna, keep an eye out for their Amateur Birding Tours soon!</p>
+
+    <div class="flex-paragraph-content">
+    <div class="paragraph-content-image">
+      <img src="../images/portrait.jpg">
+    </div>
+    <div class="paragraph-content">
+      <p>Ann is excited by heartfelt creative projects. In particular, they are passionate about comics, zines, 2D game art and UI, and illustration— as long as it involves drawing and/or telling stories! Tales that are dramatic, tragic and romantic are what they are most drawn to, with a sprinkling of hope and heart.</p>
+      <p>In addition, they love organising events and fostering communities, finding joy in bringing people together. In the past, they co-founded, organised and planned out The Games Exchange, a series of events to exchange Australian games for International ones, for showcase and appreciation across cultures. They've also organised and planned local indie game events like WIP Nights, where Sydney-based game developers come together to talk about their in-progress projects to fellow developers. They're currently spearheading the Malaysian Comics Jam Group, organising fortnightly meetups and events for local comic artists and enthusiasts.</p>
+      <p>Having returned to Malaysia after studying and working in Melbourne, Australia, for 8+ years, they've developed a deep love for zines and birdwatching. Catch them rambling about paper engineering as a means for creative storytelling, and about what new bird species they've seen. With a developing interest in flora and fauna, keep an eye out for their Amateur Birding Tours soon!</p>
+    </div>
+    </div>
+    
+  </div>
+    
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+
   </body>
 </html>
