--- a/illustration/index.html
+++ b/illustration/index.html
@@ -4,21 +4,41 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width"/>
     <title>Illustration</title>
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="../styles/style.css" rel="stylesheet"/>
     <link href="../styles/illustration.css" rel="stylesheet"/>
   </head>
   <body>
-    <nav class="navbar">
-      <div><a href="/">Home</a></div>
-      <div><a href="../illustration/">Illustration</a></div>
-      <div><a href="../graphic-design/">Graphic Design</a></div>
-      <div><a href="../games/">Games</a></div>
-      <div><a href="../comics-and-zines/">Comics and Zines</a></div>
-      <div><a href="../about/">About</a></div>
-    </nav>
     <div class="page-content">
+      <nav class="navbar navbar-expand-lg">
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../illustration/">Illustration</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../graphic-design/">Graphic Design</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../games/">Games</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../comics-and-zines/">Comics and Zines</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../about/">About</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
       <h1>Illustration</h1>
       <div class="illustration-gallery">
         <img src="/illustration/images/Zulay.jpg" class="illustration-gallery-item">
@@ -38,5 +58,6 @@
         <img src="/illustration/images/Fashion-Portrait.jpg" class="illustration-gallery-item">
       </div>
     </div>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
   </body>
 </html>
