--- a/graphic-design/index.html
+++ b/graphic-design/index.html
@@ -39,12 +39,31 @@
         </div>
       </div>
     </nav>
-      <h1>Graphic Design</h1>
+    
+    <h1>Graphic Design</h1>
+
+    <collection-container>
       <div class="project-gallery">
-        <div class="project-container"><a href="/"></a></div>
-        <div class="project-container"><a href="/"></a></div>
-        <div class="project-container"><a href="/"></a></div>
+        <div class="project-container"><a href="/">
+          <img class="project-preview" src="./Ableism PSA/1.gif">
+        </a></div>
+        <div class="project-container"><a href="/">
+          <img class="project-preview" src="./All that heaven allows Title Sequence/1.gif">
+        </a></div>
+        <div class="project-container"><a href="/">
+          <img class="project-preview" src="./Frogs of Melbourne/1.gif">
+        </a></div>
+        <div class="project-container"><a href="/">
+          <img class="project-preview" src="./KoalAR/1.jpg">
+        </a></div>
+        <div class="project-container"><a href="/">
+          <img class="project-preview" src="./Monash Drawing Club Promotions/1.gif">
+        </a></div>
+        <div class="project-container"><a href="/">
+          <img class="project-preview" src="./The Hungry Ghost Festival/Event_Poster_Animated.gif">
+        </a></div>
       </div>
+    </collection-container>
     </div>
     <script src="scripts/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
