--- a/games/index.html
+++ b/games/index.html
@@ -6,10 +6,11 @@
     <title>Games</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="../styles/style.css" rel="stylesheet"/>
+    <link href="../styles/games.css" rel="stylesheet"/>
   </head>
   <body>
     <div class="page-content">
-      <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -37,14 +38,37 @@
           </ul>
         </div>
       </div>
-      </nav>
-    <h1>Games</h1>
-    </div>
-    <div class="collection-container">
+    </nav>
 
-    </div>
+    <h1>Games</h1>
     
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+    <div class="collection-container">
+      <div class="project-gallery">
+        <div class="project-container">
+          <a href="./KoalAR">
+            <img class="project-preview" src="../graphic-design/KoalAR/1.jpg">
+          </a>
+        </div>
+        <div class="project-container">
+          <a href="./Life Ready Games/">
+            <img class="project-preview" src="../games/Life Ready Games/1.jpg">
+          </a>
+        </div>
+        <div class="project-container">
+          <a href="./Papillon Park/">
+            <img class="project-preview" src="../games/Pappillon Park/1.jpg">
+          </a>
+        </div>
+        <div class="project-container">
+          <a href="./Word Worm/">
+            <img class="project-preview" src="../games/Word Worm/1.jpg">
+          </a>
+        </div>
+      </div>
+    </div>
+
+  </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 
   </body>
 </html>
