plotted more for the about page... need to write

--- a/about/index.html
+++ b/about/index.html
@@ -42,16 +42,35 @@
     <h1>About</h1>
 
     <div class="flex-paragraph-content">
-    <div class="paragraph-content-image">
-      <img src="../images/portrait.jpg">
-    </div>
-    <div class="paragraph-content">
-      <p>Ann is excited by heartfelt creative projects. In particular, they are passionate about comics, zines, 2D game art and UI, and illustration— as long as it involves drawing and/or telling stories! Tales that are dramatic, tragic and romantic are what they are most drawn to, with a sprinkling of hope and heart.</p>
-      <p>In addition, they love organising events and fostering communities, finding joy in bringing people together. In the past, they co-founded, organised and planned out The Games Exchange, a series of events to exchange Australian games for International ones, for showcase and appreciation across cultures. They've also organised and planned local indie game events like WIP Nights, where Sydney-based game developers come together to talk about their in-progress projects to fellow developers. They're currently spearheading the Malaysian Comics Jam Group, organising fortnightly meetups and events for local comic artists and enthusiasts.</p>
-      <p>Having returned to Malaysia after studying and working in Melbourne, Australia, for 8+ years, they've developed a deep love for zines and birdwatching. Catch them rambling about paper engineering as a means for creative storytelling, and about what new bird species they've seen. With a developing interest in flora and fauna, keep an eye out for their Amateur Birding Tours soon!</p>
-    </div>
+      <div class="paragraph-content-image">
+        <img src="../images/portrait.jpg">
+      </div>
+      <div class="paragraph-content">
+        <p>Ann is excited by heartfelt creative projects. In particular, they are passionate about comics, zines, 2D game art and UI, and illustration— as long as it involves drawing and/or telling stories! Tales that are dramatic, tragic and romantic are what they are most drawn to, with a sprinkling of hope and heart.</p>
+        <p>In addition, they love organising events and fostering communities, finding joy in bringing people together. In the past, they co-founded, organised and planned out The Games Exchange, a series of events to exchange Australian games for International ones, for showcase and appreciation across cultures. They've also organised and planned local indie game events like WIP Nights, where Sydney-based game developers come together to talk about their in-progress projects to fellow developers. They're currently spearheading the Malaysian Comics Jam Group, organising fortnightly meetups and events for local comic artists and enthusiasts.</p>
+        <p>Having returned to Malaysia after studying and working in Melbourne, Australia, for 8+ years, they've developed a deep love for zines and birdwatching. Catch them rambling about paper engineering as a means for creative storytelling, and about what new bird species they've seen. With a developing interest in flora and fauna, keep an eye out for their Amateur Birding Tours soon!</p>
+      </div>
     </div>
     
+    <h2>Background</h2>
+    <div class="flex-paragraph-content">
+      <div class="paragraph-content">
+        <p>Education history, life in melb and malaysia</p>
+      </div>
+      <div class="paragraph-content-image">
+        <img src="../images/portrait.jpg">
+      </div>
+    </div>
+
+    <h2>Events and Community Management</h2>
+    <div class="flex-paragraph-content">
+      <div class="paragraph-content-image">
+        <img src="../images/portrait.jpg">
+      </div>
+      <div class="paragraph-content">
+        <p>Games Exchange, Wip Night, Comics Jam Msia</p>
+      </div>
+    </div>
   </div>
     
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
