added basic footer

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width"/>
     <title>Wyrdle Zone</title>
+    <script src="https://kit.fontawesome.com/2fb23eb5d1.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="styles/style.css" rel="stylesheet"/>
   </head>
@@ -75,7 +76,36 @@
     </div>  
     </div>
     <footer>
-    <a href="./seally-time/"><img src="images/seal.png" alt="A drawing"></a>
+      <ul class="footer-container">
+        <li>
+          <a aria-current="page" href="/">Home</a>
+        </li>
+        <li>
+          <a href="./illustration/">Illustration</a>
+        </li>
+        <li>
+          <a href="./graphic-design/">Graphic Design</a>
+        </li>
+        <li>
+          <a href="./games/">Games</a>
+        </li>
+        <li>
+          <a href="./comics-and-zines/">Comics and Zines</a>
+        </li>
+        <li>
+          <a href="./about/">About</a>
+        </li>
+      </ul>
+      <div class="socials">
+        <div>
+          <i class="fa-regular fa-envelope"></i>
+          <i class="fa-brands fa-bluesky"></i>
+          <i class="fa-brands fa-x-twitter"></i>
+          <i class="fa-brands fa-tumblr"></i>
+          <i class="fa-brands fa-instagram"></i>
+        </div>
+      </div>
+      <a href="./seally-time/"><img  class="secret-bonus" src="images/seal.png" alt="A drawing"></a>
     </footer>
     <script src="/scripts/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
