Added warning bar

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link href="styles/style.css" rel="stylesheet"/>
   </head>
   <body>
+    <div class="warning" style="background-color: yellowgreen; text-align: center; width: 100%; position:fixed; z-index:100;">
+      <p>Hi there! My site is still under construction, so a lot of links and things might be broken still. Hang tight!</p>
+    </div>
     <div class="page-content">
     <nav class="navbar navbar-expand-lg">
       <div class="container-fluid">
