--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="warning" style="background-color: yellowgreen; text-align: center; width: 100%; position:fixed; z-index:100;">
-      <p>Hi there! My site is still under construction, so a lot of links and things might be broken still. Hang tight!</p>
+      <p>Hi there! My site is still under construction, so a lot of links and things are still broken. Please check out my old portfolio <a href="https://khawannli.myportfolio.com/">here.</a> If you'd like to reach out to me, email me at <a href="mailto:wyrdle.art@gmail.com">wyrdle.art@gmail.com</a>.</p>
     </div>
     <div class="page-content">
     <nav class="navbar navbar-expand-lg">
