Added game images

--- a/games/index.html
+++ b/games/index.html
@@ -56,7 +56,7 @@
         </div>
         <div class="project-container">
           <a href="./Papillon Park/">
-            <img class="project-preview" src="../games/Pappillon Park/1.jpg">
+            <img class="project-preview" src="../games/Papillon Park/1.jpg">
           </a>
         </div>
         <div class="project-container">
