Fixed up the footer!

--- a/index.html
+++ b/index.html
@@ -79,35 +79,36 @@
     </div>  
     </div>
     <footer>
-      <ul class="footer-container">
-        <li>
-          <a aria-current="page" href="/">Home</a>
-        </li>
-        <li>
-          <a href="./illustration/">Illustration</a>
-        </li>
-        <li>
-          <a href="./graphic-design/">Graphic Design</a>
-        </li>
-        <li>
-          <a href="./games/">Games</a>
-        </li>
-        <li>
-          <a href="./comics-and-zines/">Comics and Zines</a>
-        </li>
-        <li>
-          <a href="./about/">About</a>
-        </li>
-      </ul>
-      <div class="socials">
-        <div>
-          <i class="fa-regular fa-envelope"></i>
-          <i class="fa-brands fa-bluesky"></i>
-          <i class="fa-brands fa-x-twitter"></i>
-          <i class="fa-brands fa-tumblr"></i>
-          <i class="fa-brands fa-instagram"></i>
+      <div class="footer-links-container">
+        <ul class="footer-container">
+          <li>
+            <a aria-current="page" href="/">Home</a>
+          </li>
+          <li>
+            <a href="./illustration/">Illustration</a>
+          </li>
+          <li>
+            <a href="./graphic-design/">Graphic Design</a>
+          </li>
+          <li>
+            <a href="./games/">Games</a>
+          </li>
+          <li>
+            <a href="./comics-and-zines/">Comics and Zines</a>
+          </li>
+          <li>
+            <a href="./about/">About</a>
+          </li>
+        </ul>
+        <div class="socials">
+          <a href="mailto:wyrdle.art@gmail.com"><i class="fa-regular fa-envelope"></i></a>
+          <a href="https://bsky.app/profile/wyrdle.bsky.social" target="_blank"><i class="fa-brands fa-bluesky"></i></a>
+          <a href="https://x.com/wyrdle" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+          <a href="https://wyrdle.tumblr.com/" target="_blank"><i class="fa-brands fa-tumblr"></i></a>
+          <a href="https://www.instagram.com/wyrdle/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
         </div>
       </div>
+      
       <a href="./seally-time/"><img  class="secret-bonus" src="images/seal.png" alt="A drawing"></a>
     </footer>
     <script src="/scripts/main.js"></script>
