--- a/about/index.html
+++ b/about/index.html
@@ -46,7 +46,7 @@
         <img src="../images/portrait.jpg">
       </div>
       <div class="paragraph-content">
-        <p>Ann is excited by heartfelt creative projects. In particular, they are passionate about comics, zines, 2D game art and UI, and illustration— as long as it involves drawing and/or telling stories! Tales that are dramatic, tragic and romantic are what they are most drawn to, with a sprinkling of hope and heart.</p>
+        <p>Ann is an artist and community organiser excited by heartfelt creative projects. In particular, they are passionate about comics, zines, 2D game art and UI, and illustration— as long as it involves drawing and/or telling stories! Tales that are dramatic, tragic and romantic are what they are most drawn to, with a sprinkling of hope and heart.</p>
         <p>In addition, they love organising events and fostering communities, finding joy in bringing people together. In the past, they co-founded, organised and planned out The Games Exchange, a series of events to exchange Australian games for International ones, for showcase and appreciation across cultures. They've also organised and planned local indie game events like WIP Nights, where Sydney-based game developers come together to talk about their in-progress projects to fellow developers. They're currently spearheading the Malaysian Comics Jam Group, organising fortnightly meetups and events for local comic artists and enthusiasts.</p>
         <p>Having returned to Malaysia after studying and working in Melbourne, Australia, for 8+ years, they've developed a deep love for zines and birdwatching. Catch them rambling about paper engineering as a means for creative storytelling, and about what new bird species they've seen. With a developing interest in flora and fauna, keep an eye out for their Amateur Birding Tours soon!</p>
       </div>
@@ -55,7 +55,15 @@
     <h2>Background</h2>
     <div class="flex-paragraph-content">
       <div class="paragraph-content">
-        <p>Education history, life in melb and malaysia</p>
+        <h3>Work History</h3>
+        <ul>
+        <li>Marketing Coordinator at Noble Steed Games</li>
+        <li>Marketing Coordinator at Bring me Home</li>
+        </ul>
+        <h3>Education</h3>
+        <ul>
+          <li>Bachelor of Business (Marketing) and Bachelor of Communcation Design at Monash University Australia</li>
+        </ul>
       </div>
       <div class="paragraph-content-image">
         <img src="../images/portrait.jpg">
@@ -68,7 +76,12 @@
         <img src="../images/portrait.jpg">
       </div>
       <div class="paragraph-content">
-        <p>Games Exchange, Wip Night, Comics Jam Msia</p>
+        <h3>Comics Jam Malaysia</h3>
+        <p>Comics Jam Malaysia is a fortnightly art jam for comic artists in Malaysia. This meet up is for artists to co-work, network and appreciate comics. In addition to regular scheduled comics jams at Lalaport, the jam community also hosts life drawing sessions, excursions, and eventually workshops. For more info, check out the comics jam community <a href="https://www.instagram.com/comicsjam.msia/">on Instagram!</a> (Landing page soon!) </p>
+        <h3>Games Exchange Event Series</h3>
+        <p>The Games Exchange is an event where Australian games are exchanged with partnered countries' indie games, and then showcased in-person at both locations. Through this, the event aims to foster cultural exchange through games, as well as increase the appreciation for indie games. So far, the Games Exchange has been run with Malaysia, Philippines, Indonesia and most recently, UK. For more information about the event, check out <a href="https://noblesteedgames.com/culture/games-exchange/">its website.</a></p>
+        <h3>WIP Nights</h3>
+        <p>WIP Night is an event where Sydney-based game developers are invited to talk about their work-in-progress projects, sharing whatever challenges they've faced and how they've overcome them to fellow developers. These talks range from technical knowledge, to more personal hurdles and journeys. As such, WIP nights become a space for local developers to deepen their connections and learn from each other. For more information about this event, check out <a href="https://noblesteedgames.com/culture/wip-night/">its website.</a></p>
       </div>
     </div>
   </div>
