--- a/about/index.html
+++ b/about/index.html
@@ -6,6 +6,7 @@
     <title>About</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="../styles/style.css" rel="stylesheet"/>
+    <link href="../styles/about.css" rel="stylesheet"/>
   </head>
   <body>
     <div class="page-content">
@@ -87,8 +88,9 @@
           <li>Bachelor of Business (Marketing) and Bachelor of Communcation Design at Monash University Australia</li>
         </ul>
       </div>
-      <div class="paragraph-content-image">
+      <div class="paragraph-content-image hover-container mushroom-pic">
         <img src="../images/mushroom1.jpg">
+        <img src="../images/mushroom2.jpg">
       </div>
     </div>
 
@@ -96,6 +98,6 @@
   </div>
     
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-
+  <script src="../scripts/main.js"></script>
   </body>
 </html>
