added a silly seal...

--- a/about/index.html
+++ b/about/index.html
@@ -43,8 +43,9 @@
     <h1>About</h1>
 
     <div class="content-segment  flex-paragraph-content">
-      <div class="paragraph-content-image-alt">
+      <div class="paragraph-content-image-alt hover-container-lift">
         <img src="../images/portrait.jpg">
+        <img src="../images/seally.gif">
       </div>
       <div class="paragraph-content-alt">
         <p>Ann is an artist and community organiser excited by heartfelt creative projects. In particular, they are passionate about comics, zines, 2D game art and UI, and illustration— as long as it involves drawing and/or telling stories! Tales that are dramatic, tragic and romantic are what they are most drawn to, with a sprinkling of hope and heart.</p>
