Fixed up some link hover effects and the main bgs

--- a/about/index.html
+++ b/about/index.html
@@ -59,17 +59,20 @@
         <div class="tri-column-1">
           <img src="../images/comicsjam.jpg">
           <h3>Comics Jam Malaysia</h3>
-          <p>Comics Jam Malaysia is a fortnightly art jam for comic artists in Malaysia. This meet up is for artists to co-work, network and appreciate comics. In addition to regular scheduled comics jams at Lalaport, the jam community also hosts life drawing sessions, excursions, and eventually workshops. For more info, check out the comics jam community <a href="https://www.instagram.com/comicsjam.msia/">on Instagram!</a> (Landing page soon!) </p>
+          <p>Comics Jam Malaysia is a fortnightly art jam for comic artists in Malaysia. This meet up is for artists to co-work, network and appreciate comics. In addition to regular scheduled comics jams at Lalaport, the jam community also hosts life drawing sessions, excursions, and eventually workshops.</p> 
+          <p>For more info, check out the comics jam community <a class="in-text" href="https://www.instagram.com/comicsjam.msia/">on Instagram!</a> (Landing page soon!) </p>
         </div>
         <div class="tri-column-2">
           <img src="../images/gamesexchange.jpg">
         <h3>Games Exchange Event Series</h3>
-        <p>The Games Exchange is an event where Australian games are exchanged with partnered countries' indie games, and then showcased in-person at both locations. Through this, the event aims to foster cultural exchange through games, as well as increase the appreciation for indie games. So far, the Games Exchange has been run with Malaysia, Philippines, Indonesia and most recently, UK. For more information about the event, check out <a href="https://noblesteedgames.com/culture/games-exchange/">its website.</a></p>
+        <p>The Games Exchange is an event where Australian games are exchanged with partnered countries' indie games, and then showcased in-person at both locations. Through this, the event aims to foster cultural exchange through games, as well as increase the appreciation for indie games. So far, the Games Exchange has been run with Malaysia, Philippines, Indonesia and most recently, UK. </p>
+        <p>For more information about the event, check out <a class="in-text" href="https://noblesteedgames.com/culture/games-exchange/">its website.</a></p>
         </div>        
         <div class="tri-column-3">
         <img src="../images/wipnight.jpg">
         <h3>WIP Nights</h3>
-        <p>WIP Night is an event where Sydney-based game developers are invited to talk about their work-in-progress projects, sharing whatever challenges they've faced and how they've overcome them to fellow developers. These talks range from technical knowledge, to more personal hurdles and journeys. As such, WIP nights become a space for local developers to deepen their connections and learn from each other. For more information about this event, check out <a href="https://noblesteedgames.com/culture/wip-night/">its website.</a></p>
+        <p>WIP Night is an event where Sydney-based game developers are invited to talk about their work-in-progress projects, sharing whatever challenges they've faced and how they've overcome them to fellow developers. These talks range from technical knowledge, to more personal hurdles and journeys. As such, WIP nights become a space for local developers to deepen their connections and learn from each other.</p>
+        <p>For more information about this event, check out <a class="in-text" href="https://noblesteedgames.com/culture/wip-night/">its website.</a></p>
         </div>      
       </div>
     </div>
