--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <div class="homepage-comic-subpanel">
         <img src="images/contact.png" alt="A drawing" class="homepage-comic-subpanel-contents" style="width: 100%;">
         <p class="homepage-comic-subpanel-contents text-box text-box-seven">Reach out to me here!</p>
-        <p class="homepage-comic-subpanel-contents text-box text-box-eight"><a href="mailto:wyrdle.art@gmail.com">wyrdle.art@gmail.com</a></p>
+        <p class="homepage-comic-subpanel-contents text-box text-box-eight"><a class="in-text" href="mailto:wyrdle.art@gmail.com">wyrdle.art@gmail.com</a></p>
         <a href="mailto:wyrdle.art@gmail.com"><img src="images/mail-creature.png" alt="A drawing" class="homepage-comic-subpanel-contents mail-icon"></a>
       </div>
     </div>  
@@ -82,22 +82,22 @@
       <div class="footer-links-container">
         <ul class="footer-container">
           <li>
-            <a aria-current="page" href="/">Home</a>
+            <a class="in-text" aria-current="page" href="/">Home</a>
           </li>
           <li>
-            <a href="./illustration/">Illustration</a>
+            <a class="in-text" href="./illustration/">Illustration</a>
           </li>
           <li>
-            <a href="./graphic-design/">Graphic Design</a>
+            <a class="in-text" href="./graphic-design/">Graphic Design</a>
           </li>
           <li>
-            <a href="./games/">Games</a>
+            <a class="in-text" href="./games/">Games</a>
           </li>
           <li>
-            <a href="./comics-and-zines/">Comics and Zines</a>
+            <a class="in-text" href="./comics-and-zines/">Comics and Zines</a>
           </li>
           <li>
-            <a href="./about/">About</a>
+            <a class="in-text" href="./about/">About</a>
           </li>
         </ul>
         <div class="socials">
